# AIobservability

./: .env.example  _AUDIT_NOTE.md  setup.sh
backend/: requirements.txt
backend/app/: config.py  main.py
backend/app/api/: router.py
backend/app/core/: database.py  security.py
backend/app/engines/: drift_engine.py  hallucination_engine.py
backend/app/models/: __init__.py  alerts.py  metrics.py  projects.py  telemetry.py
backend/app/scheduler/: background.py  notifiers.py  tasks.py
backend/app/schemas/: alerts.py  dashboard.py  metrics.py  telemetry.py
dashboard/: index.html  package-lock.json  package.json  tsconfig.json
dashboard/src/: App.tsx  main.tsx
dashboard/src/api/: client.ts
dashboard/src/components/: Layout.tsx  Sidebar.tsx
dashboard/src/hooks/: useMetrics.ts
dashboard/src/pages/: AIInsights.tsx  Alerts.tsx  CFEvalHarnessIntegrationPage.tsx  CFLlmCostLatencyDashboardsPage.tsx  CFOpentelemetryCompatibilityPage.tsx  CFPromptRegressionDetectorPage.tsx  CFTraceReplayPage.tsx  CodexCustomVizFeature.tsx  CodexOperationsFeature.tsx  DriftAnalysis.tsx  GapLimitedIntegrationsOnlyOwnSdkNoOpentelemetryPage.tsx  GapNoAuditLoggingPage.tsx  GapNoAuthenticationOrRbacLayerVisiblePage.tsx  GapNoBillingUsageMeteringPage.tsx  GapNoCostPage.tsx  GapNoDriftPage.tsx  GapNoExplicitAnomalyPage.tsx  GapNoRetentionArchivalPoliciesForTelemetryPage.tsx  GapNoRootPage.tsx  GapNoWebhooksForAlertDeliverySlackPagerdutyPage.tsx  (+5 more)
sample_app/: app.py  generate_traffic.py
sdk/: pyproject.toml
sdk/src/aiobserve/: __init__.py  client.py  decorators.py  types.py
(+30 files in other folders)
