[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiobserve"
version = "0.1.0"
description = "SDK for AI Observability Platform"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
